# configurator

./: Cargo.toml  build.rs  process  testfile  todo
examples/dhallattempt/: example.dhall  git.hmmmm
examples/dhallattempt/builtin/exa/: exa.dhall
examples/dhallattempt/builtin/system/: system.dhall
examples/dhallattempt/lib/: types.dhall
src/: ast.rs  builtins.rs  cli.rs  grammar.pest  interpreter.rs  main.rs  parser.rs  typechecker.rs
