[package]
name = "rust_attempt"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
clap_complete = "4.1.5"
palette = "0.6.1"
pest = "2.5.6"
pest_derive = "2.5.6"
semver = "1.0.17"

[build-dependencies]
clap = { version = "4.1.11", features = ["derive"] }
clap_complete = "4.1.5"
clap_mangen = "0.2.10"
